# reborn

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  slides.html  slides.md
.github/workflows/: ci.yml
app/: auth.py  config.py  dashboard_ui.py  frontmatter.py  history_ui.py  logging.py  main.py  utils.py
app/agent/: codex_client.py  image_fallback.py  managed_instructions.md  runtime.py  session_id.py  skills.py  system_prompt.py  types.py
app/channels/: slack.py  telegram.py
app/mcp/: memory.py  server.py
app/monitoring/: tracker.py  types.py  ui.py
app/orchestrator/: __init__.py  ingress.py  service.py  types.py
app/scheduler/: __init__.py  admin.py  context_refresh.py  delivery.py  jobs.py  prompts.py  runner.py
docs/: SETUP.md
scripts/: install_setup_skill.py  session_history.py
tests/: conftest.py  test_attachments.py  test_claude_backend.py  test_codex_client.py  test_codex_compact.py  test_config.py  test_dashboard_api.py  test_delivery.py  test_execution_service.py  test_execution_tracker.py  test_google_workspace_skill.py  test_image_fallback.py  test_mcp_memory.py  test_monitoring_callback.py  test_prompt_loader.py  test_reactions.py  test_runtime_backend.py  test_scheduler_jobs.py  test_scheduler_runner.py  test_session_manager.py  test_session_store.py  test_setup_engine.py  test_skill_loader.py  test_streaming.py  test_system_prompt.py  test_telegram_session_keys.py  test_typing_indicator.py  test_utils.py
workspace/: MEMORY.md.example  SOUL.md  SOUL.md.example
(+23 files in other folders)
